--- a/testapp/src/app/app.component.html
+++ b/testapp/src/app/app.component.html
@@ -1,3 +1,14 @@
 <h1> Hello World! </h1>
-<app-rooms></app-rooms>
+
+<div [ngSwitch]="role">
+  <div *ngSwitchCase="'User'">
+    Welcome User!
+  </div>
+  <div *ngSwitchCase="'Admin'">
+    <app-rooms></app-rooms>
+  </div>
+  <div *ngSwitchDefault>
+    You are not allowed to see this page!
+  </div>
+</div>  
 <router-outlet />
