--- a/testapp/src/app/rooms/rooms.component.html
+++ b/testapp/src/app/rooms/rooms.component.html
@@ -4,4 +4,33 @@
     <p> Number of Rooms: </p>
     <div [innerText]="numberOfRooms"></div>
 </div>
+
+<div *ngIf="rooms != undefined && rooms.availableRooms && rooms.availableRooms > 0">
+    Rooms List
+    <table>
+        <tr>
+            <th>Index</th>
+            <th>Event/Odd</th>
+            <th>Room Number</th>
+            <th>Room Type</th>
+            <th>Room Price</th>
+            <th>Room Amenities</th>
+            <th>Checkin Time</th>
+            <th>Checkout Time</th>
+        </tr>
+        <tr
+            [ngClass]="e ? 'even' : 'odd'" 
+            *ngFor="let room of roomList; let e=even; let o=odd; let i = index"
+        >
+            <td> {{ i }} </td>
+            <td> {{ e ? 'Even' :  'Odd' }}</td>
+            <td> {{ room.roomNumber }} </td>
+            <td> {{ room.roomType }} </td>
+            <td> {{ room.price }} </td>
+            <td> {{ room.amenities }} </td>
+            <td> {{ room.checkinTime }} </td>
+            <td> {{ room.checkoutTime }} </td>
+        </tr>
+    </table>
+</div>
 <button (click) = "toggle()">Toggle</button>
