--- a/testapp/src/app/rooms/rooms.component.html
+++ b/testapp/src/app/rooms/rooms.component.html
@@ -25,11 +25,11 @@
             <td> {{ i }} </td>
             <td> {{ e ? 'Even' :  'Odd' }}</td>
             <td> {{ room.roomNumber }} </td>
-            <td> {{ room.roomType }} </td>
+            <td> {{ room.roomType | uppercase }} </td>
             <td> {{ room.price }} </td>
-            <td> {{ room.amenities }} </td>
-            <td> {{ room.checkinTime }} </td>
-            <td> {{ room.checkoutTime }} </td>
+            <td> {{ room.amenities | lowercase }} </td>
+            <td> {{ room.checkinTime | date : 'short' }} </td>
+            <td> {{ room.checkoutTime | date }} </td>
         </tr>
     </table>
 </div>
