--- a/testapp/src/app/rooms/rooms.component.html
+++ b/testapp/src/app/rooms/rooms.component.html
@@ -7,7 +7,7 @@
 
 <div *ngIf="rooms != undefined && rooms.availableRooms && rooms.availableRooms > 0">
     Rooms List
-    <table>
+    <table class="table">
         <tr>
             <th>Index</th>
             <th>Event/Odd</th>
@@ -33,4 +33,4 @@
         </tr>
     </table>
 </div>
-<button (click) = "toggle()">Toggle</button>
+<button class="btn btn-primary" (click) = "toggle()">Toggle</button>
