--- a/testapp/src/app/rooms/rooms.component.html
+++ b/testapp/src/app/rooms/rooms.component.html
@@ -5,32 +5,15 @@
     <div [innerText]="numberOfRooms"></div>
 </div>
 
+<div *ngIf="selectedRoom">
+    {{ selectedRoom | json }}
+</div>
+
 <div *ngIf="rooms != undefined && rooms.availableRooms && rooms.availableRooms > 0">
     Rooms List
-    <table class="table">
-        <tr>
-            <th>Index</th>
-            <th>Event/Odd</th>
-            <th>Room Number</th>
-            <th>Room Type</th>
-            <th>Room Price</th>
-            <th>Room Amenities</th>
-            <th>Checkin Time</th>
-            <th>Checkout Time</th>
-        </tr>
-        <tr
-            [ngClass]="e ? 'even' : 'odd'" 
-            *ngFor="let room of roomList; let e=even; let o=odd; let i = index"
-        >
-            <td> {{ i }} </td>
-            <td> {{ e ? 'Even' :  'Odd' }}</td>
-            <td> {{ room.roomNumber }} </td>
-            <td> {{ room.roomType | uppercase }} </td>
-            <td> {{ room.price }} </td>
-            <td> {{ room.amenities | lowercase }} </td>
-            <td> {{ room.checkinTime | date : 'short' }} </td>
-            <td> {{ room.checkoutTime | date }} </td>
-        </tr>
-    </table>
+    <app-rooms-list
+        [rooms]="roomList"
+        (selectedRoom)="selectRoom($event)"
+    ></app-rooms-list>
 </div>
 <button class="btn btn-primary" (click) = "toggle()">Toggle</button>
