--- a/testapp/src/app/rooms/rooms.component.html
+++ b/testapp/src/app/rooms/rooms.component.html
@@ -1,4 +1,6 @@
-<h1> Welcome to {{ hotelName }} </h1>
+<!-- <h1> Welcome to {{ hotelName }} </h1> --> 
+
+<app-header></app-header>
 
 <div [hidden]="hideRooms">
     <p> Number of Rooms: </p>
