post put and delete methods

--- a/testapp/src/app/rooms/rooms.component.html
+++ b/testapp/src/app/rooms/rooms.component.html
@@ -1,4 +1,4 @@
-<!-- <h1> Welcome to {{ hotelName }} </h1> --> 
+<!-- <h1> Welcome to {{ hotelName }} </h1> -->
 
 <app-header></app-header>
 
@@ -23,3 +23,5 @@
     ></app-rooms-list>
 </div>
 <button class="btn btn-primary" (click) = "toggle()">Toggle</button>
+<button class="btn btn-primary" (click) = "editRoom()">Edit Room</button>
+<button class="btn btn-primary" (click) = "deleteRoom()">Delete Room</button>
