Broken angular material library

--- a/testapp/src/app/app.component.html
+++ b/testapp/src/app/app.component.html
@@ -1,4 +1,2 @@
-<a [routerLink]="'rooms'">Rooms</a>
-<a [routerLink]="'employee'">Employee</a>
-<app-header></app-header>
+<app-nav></app-nav>
 <router-outlet />
