router service in js files

--- a/testapp/src/app/rooms/rooms.component.html
+++ b/testapp/src/app/rooms/rooms.component.html
@@ -22,3 +22,4 @@
 <button class="btn btn-primary" (click) = "toggle()">Toggle</button>
 <button class="btn btn-primary" (click) = "editRoom()">Edit Room</button>
 <button class="btn btn-primary" (click) = "deleteRoom()">Delete Room</button>
+<app-login></app-login>
