--- a/testapp/src/app/bookings/bookings.component.scss
+++ b/testapp/src/app/bookings/bookings.component.scss
@@ -5,7 +5,5 @@
 .form-basics {
   display: flex;
   flex-direction: column;
-  padding-left: 3rem;
-  padding-right: 3rem;
-  padding-top: 3rem;
+  padding: 1rem;
 }
