--- a/testapp/src/app/bookings/bookings.component.html
+++ b/testapp/src/app/bookings/bookings.component.html
@@ -121,6 +121,74 @@ export interface Booking {
     <mat-datepicker #pickerC></mat-datepicker>
   </mat-form-field>
 
+  <div formGroupName="address">
+    <mat-accordion class="example-headers-align" multi>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>  Address </mat-panel-title>
+        </mat-expansion-panel-header>
+
+        <div class="form-basics">
+          <mat-form-field>
+            <mat-label>Address Line 1</mat-label>
+            <input
+              type="text"
+              matInput
+              placeholder="Address Line 1"
+              formControlName="addressLine1"
+            />
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-label>Address Line 2</mat-label>
+            <input
+              type="text"
+              matInput
+              placeholder="Address Line 2"
+              formControlName="addressLine2"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>City</mat-label>
+            <input
+              type="text"
+              matInput
+              placeholder="City"
+              formControlName="city"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>State</mat-label>
+            <input
+              type="text"
+              matInput
+              placeholder="State"
+              formControlName="state"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Country</mat-label>
+            <input
+              type="text"
+              matInput
+              placeholder="Country"
+              formControlName="country"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Zip Code</mat-label>
+            <input
+              type="text"
+              matInput
+              placeholder="Zip Code"
+              formControlName="zipCode"
+            />
+          </mat-form-field>
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </div>
+
   <div>
     <button mat-flat-button color="primary"> Submit </button>
   </div>
